--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
         <div class="socials"> 
             <a href="https://www.facebook.com/gamerzonebewareplz" target="_blank"><img src="images/facebooklogo.png"></a>
             <a href="https://www.instagram.com/otakuarrives" target="_blank"><img src="images/instagramlogo.png"></a>
-            <a href="https://www.twitter.com/otakuarrives" target="_blank"><img src="images/twitterlogo.png"></a>
+            <a href="https://www.linkedin.com/in/charles-marco-hernandez-337239366/" target="_blank"><img src="images/linkedinlogo.png"></a>
         </div>
         <p>© 2024 Portfolio by Ota. All rights reserved.</p>
     </footer>
